fix: improve login dark mode and resolve scss build errors

--- a/src/app/components/modals/file-preview-modal/file-preview-modal.scss
+++ b/src/app/components/modals/file-preview-modal/file-preview-modal.scss
@@ -1,7 +1,8 @@
+@use '../../../../styles/variables' as *;
+
 // Variables
 $primary: var(--primary);
 $text-sub: var(--text-sub);
-$font-main: 'Helvetica Neue', Arial, sans-serif;
 
 .file-preview-modal-overlay {
     position: fixed;
