--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,7 +24,7 @@ html {
 }
 
 body {
-  color-scheme: light;
+  color-scheme: light dark;
   background-color: var(--mat-sys-surface);
   color: var(--mat-sys-on-surface);
   font-family: 'Inter', 'IBM Plex Sans Thai Looped', sans-serif;
